<resources>
    <string name="app_name">NoteBeyond</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="inicio">Inicio</string>
    <string name="calendario">Calendario</string>
    <string name="compromisos">Compromisos</string>
    <string name="contactos">Contactos</string>
    <string name="archivos">Archivos</string>
    <string name="ajustes">Ajustes</string>
    <string name="about">Acerca de</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_subject">Registrar Asignatura</string>
    <string name="txtNameSubject">Nombre</string>
    <string name="txtTimeSubject">Hora</string>

    <string-array name="days">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Miércoles</item>
        <item>Sábado</item>
        <item>Domingo</item>
    </string-array>
</resources>
