<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/calendario" />
        <item
            android:id="@+id/nav_homeworks"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/compromisos" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/contactos" />

        <item
            android:id="@+id/nav_files"
            android:icon="@android:drawable/sym_contact_card"
            android:title="@string/archivos" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ajustes" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
